# SwAW_Projekt

./: .gitignore  .gitmodules  README.md
CPP/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
CPP/sensor_interface/: sensor_interface.hpp
CPP/src/: SimpleLogClass.hpp  pir.cpp
CPP/src/SensorClass/: SensorClass.cpp  SensorClass.hpp
CPP/src/dbg_trace/: dbg_trace.cpp  dbg_trace.hpp  dbg_trace_types.hpp
CPP/src/pir_class/: PIRClass.cpp  PIRClass.hpp
CPP/src/sensor_class/: SensorClass.cpp  SensorClass.hpp
